fixed edge case for account creation/added pw visibility toggle

--- a/static/css/project.css
+++ b/static/css/project.css
@@ -3,3 +3,13 @@
     height: 300px;
     width: 400px;
 }
+
+
+form label {
+
+    width: 240px;
+    
+   
+}
+
+
